更新每日紀錄.ipynb

--- a/202510_ver.1/每日紀錄.ipynb
+++ b/202510_ver.1/每日紀錄.ipynb
@@ -2,11 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "dd89fe9f-fafc-4e02-a070-417b2a29f9f0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "今天日期yyyy-mm-dd(結束輸入請輸入send): 2025-10-28\n",
+      "類別: food\n",
+      "品牌: FRANKIE\n",
+      "品項: stick\n",
+      "口味: chicken\n",
+      "克數: 10\n",
+      "寶貝有吃光嗎？YES / NO: YES\n",
+      "便便如何？沒便便 / 軟便便 / 完美便: 軟便便\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "每日紀錄表\n",
+      "今天日期｜類別｜品牌｜品項｜口味｜克數｜寶貝有吃光嗎？｜便便如何？\n",
+      "2025-10-28｜food｜FRANKIE｜stick｜chicken｜10｜YES｜軟便便\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "今天日期yyyy-mm-dd(結束輸入請輸入send): 2025-10-28\n",
+      "類別: foodie\n",
+      "品牌: PAUL\n",
+      "品項: pork\n",
+      "口味: porkk\n",
+      "克數: 10\n",
+      "寶貝有吃光嗎？YES / NO: NO\n",
+      "便便如何？沒便便 / 軟便便 / 完美便: 沒便便\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "每日紀錄表\n",
+      "今天日期｜類別｜品牌｜品項｜口味｜克數｜寶貝有吃光嗎？｜便便如何？\n",
+      "2025-10-28｜food｜FRANKIE｜stick｜chicken｜10｜YES｜軟便便\n",
+      "2025-10-28｜foodie｜PAUL｜pork｜porkk｜10｜NO｜沒便便\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "今天日期yyyy-mm-dd(結束輸入請輸入send): send\n"
+     ]
+    }
+   ],
    "source": [
+    "daily_tracker = []\n",
+    "\n",
     "while True:\n",
     "    date = input('今天日期yyyy-mm-dd(結束輸入請輸入send):')\n",
     "    if date == ('send'):\n",
@@ -17,8 +76,24 @@
     "    food_flavor = input('口味:')\n",
     "    food_weight = input('克數:')\n",
     "    finished_or_not = input('寶貝有吃光嗎？YES / NO:')\n",
-    "    poop = input('便便如何？沒便便 / 軟便便 / 完美便:')"
+    "    poop = input('便便如何？沒便便 / 軟便便 / 完美便:')\n",
+    "\n",
+    "    tracker = {'今天日期':date, '類別':food_type, '品牌':food_brand, '品項':food_name, '口味':food_flavor, '克數':food_weight, '寶貝有吃光嗎？': finished_or_not, '便便如何？':poop}\n",
+    "    daily_tracker.append(tracker)\n",
+    "\n",
+    "    print(\"\\n每日紀錄表\")\n",
+    "    print('今天日期｜類別｜品牌｜品項｜口味｜克數｜寶貝有吃光嗎？｜便便如何？')\n",
+    "    for a in daily_tracker:\n",
+    "        print(f\"{a['今天日期']}｜{a['類別']}｜{a['品牌']}｜{a['品項']}｜{a['口味']}｜{a['克數']}｜{a['寶貝有吃光嗎？']}｜{a['便便如何？']}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c26649d-89b4-435e-a389-ab842ca55231",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
